--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-0-0-x  1->3 
+DATE: 1/4/2012 
+STAFF: pf
+CHANGES: Updates for Alpha build
+
 TAG: userhelp-initialTag 
 Date: 12/24/10
 STAFF: pf
