--- a/HISTORY
+++ b/HISTORY
@@ -1,7 +1,7 @@
-TAG: userhelp-5-0-0-x  1->4
-DATE: 1/4/2012 
+TAG: userhelp-5-0-0-x  1->5
+DATE: 1/4/2012 -> 1/23/2012
 STAFF: pf
-CHANGES: Updates for Alpha build
+CHANGES: Updates for Alpha builds
 
 TAG: userhelp-initialTag 
 Date: 12/24/10
