--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-0-0-13
+DATE: 03/28/2012
+STAFF: marka
+CHANGES: 5.0 beta tag
+
 TAG: userhelp-5-0-0-x  1->12
 DATE: 1/4/2012 -> 3/7/2012
 STAFF: pf
