--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-0-0-15
+DATE: 03/30/2012
+STAFF: dbm
+CHANGES: 5.0 beta tag
+
 TAG: userhelp-5-0-0-13
 DATE: 03/28/2012
 STAFF: marka
