Rebased with 5.01 version of HEAD.

--- a/HISTORY
+++ b/HISTORY
@@ -1,4 +1,20 @@
-TAG: userhelp-5-0-0-x  1->10
+TAG: userhelp-5-0-1-2
+TAG: userhelp-5-0-1-1
+DATE: 5/13/12
+STAFF: pf
+CHANGES: 5.01 tags
+
+TAG: userhelp-5-0-0-15
+DATE: 03/30/2012
+STAFF: dbm
+CHANGES: 5.0 beta tag
+
+TAG: userhelp-5-0-0-13
+DATE: 03/28/2012
+STAFF: marka
+CHANGES: 5.0 beta tag
+
+TAG: userhelp-5-0-0-x  1->12
 DATE: 1/4/2012 -> 3/7/2012
 STAFF: pf
 CHANGES: Updates for Alpha builds
