--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-0-1-3
+DATE: 07/13/2012
+STAFF: dbm
+CHANGES: Tag for MGI Home release
+
 TAG: userhelp-5-0-1-2
 TAG: userhelp-5-0-1-1
 DATE: 5/13/12
