--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-0-1
+DATE: 8/8/12
+STAFF: pf
+CHANGES: Tag for 5.1 alpha build
+
 TAG: userhelp-5-0-1-3
 DATE: 07/13/2012
 STAFF: dbm
