userhelp-tr7106-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr7106-BP
+DATE: 9/10/12
+STAFF: marka
+CHANGES: userhelp-tr7106-BP
+
 TAG: userhelp-5-1-0-4
 TAG: userhelp-5-1-0-3
 TAG: userhelp-5-1-0-2
