--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-1-2
+DATE: 11/07/12
+STAFF: marka
+CHANGES: C4AM release sprint tag
+
 TAG: userhelp-5-1-1-1
 DATE: 10/31/12
 STAFF: marka
