--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-2-1
+DATE: 1/6/2013
+STAFF: pf
+CHANGE: Release tags for HT-MP project
+
 TAG: userhelp-5-1-1-3
 TAG: userhelp-5-1-1-2
 DATE: 11/07/12
