--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-3-2
+DATE: 04/30/2013
+STAFF: dbm
+CHANGES: Tag for 5.13 release
+
 TAG: userhelp-5-1-3-1
 DATE: 04/16/2013
 STAFF: sc
