--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,7 @@
+TAG: userhelp-5-1-3-4
 TAG: userhelp-5-1-3-3
 TAG: userhelp-5-1-3-2
-DATE: 5/1/2013
+DATE: 5/3/2013
 STAFF: dbm
 CHANGES: Tag for 5.13 release
 
