--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11248-BP
+DATE: 5/3/13
+STAFF: pf
+CHANGES: branch point tag for tr11248
+
 TAG: userhelp-5-1-3-4
 TAG: userhelp-5-1-3-3
 TAG: userhelp-5-1-3-2
