--- a/HISTORY
+++ b/HISTORY
@@ -1,7 +1,7 @@
-TAG: userhelp-tr11248-BP
-DATE: 5/3/13
+TAG: userhelp-5-1-4-1
+DATE: 6/3/13
 STAFF: pf
-CHANGES: branch point tag for tr11248
+CHANGES: Dave Shaw's latest updates
 
 TAG: userhelp-5-1-3-4
 TAG: userhelp-5-1-3-3
