--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11353-BP
+DATE: 8/13/2013
+STAFF: jsb
+CHANGES: branch point for infrastructure release
+
 TAG: userhelp-5-1-4-2
 TAG: userhelp-5-1-4-1
 DATE: 6/3/13
