--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-5-2
+DATE: 9/11/2013
+STAFF: jsb
+CHANGES: two corrections from David
+
 TAG: userhelp-5-1-5-1
 DATE: 9/09/2013
 STAFF: jsb
