--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-5-3
+DATE: 9/11/2013
+STAFF: jsb
+CHANGES: more corrections from David
+
 TAG: userhelp-5-1-5-2
 DATE: 9/11/2013
 STAFF: jsb
