--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-5-4
+DATE: 9/18/2013
+STAFF: dbm
+CHANGES: Tag for 5.15 release
+
 TAG: userhelp-5-1-5-3
 DATE: 9/11/2013
 STAFF: jsb
