--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-6-1
+DATE: 11/20/13
+STAFF: pf
+CHANGES: Tag for 5.16 release
+
 TAG: userhelp-5-1-5-4
 DATE: 9/18/2013
 STAFF: dbm
