--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-6-3
+DATE: 12/6/2013
+STAFF: dbm
+CHANGES: Tag for 5.16 release
+
 TAG: userhelp-5-1-6-2
 TAG: userhelp-5-1-6-1
 DATE: 11/20/13
