--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11468-BP
+DATE: 12/12/2013
+STAFF: jsb
+CHANGES: branch point for TR11468 (GXD anatomy) release, team scrum-bob
+
 TAG: userhelp-5-1-6-3
 DATE: 12/6/2013
 STAFF: dbm
