--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-7-1
+DATE: 02/10/2014
+STAFF: jsb
+CHANGES: merged tr11468 branch (GXD Anatomy) to trunk
+
 TAG: userhelp-tr11468-BP
 DATE: 12/12/2013
 STAFF: jsb
