--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-7-2
+DATE: 2/18/2014
+STAFF: dbm
+CHANGES: Tag for 5.17 release
+
 TAG: userhelp-5-1-7-1
 DATE: 02/10/2014
 STAFF: jsb
