--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-7-4
+DATE: 2/21/2014
+STAFF: lnh
+CHANGES: Tag for 5.17 release
+
 TAG: userhelp-5-1-7-3
 TAG: userhelp-5-1-7-2
 DATE: 2/19/2014
