--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-8-1
+DATE: 4/30/14
+STAFF: pf
+PURPOSE: 5.18 merge and release tags
+
 TAG: userhelp-tr11515-BP
 DATE: 2/24/14
 STAFF: pf
