userhelp-tr11560-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11560-BP
+DATE: 06/02/14
+STAFF: oblod
+CHANGES: branch point tag for tr11560 release
+
 TAG: userhelp-5-1-8-3
 TAG: userhelp-5-1-8-2
 DATE: 5/13/14
