--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-9-2
+DATE: 7/22/2014
+STAFF: dbm
+CHANGES: Tag for 5.19 release
+
 TAG: userhelp-tr11560-BP
 DATE: 06/02/14
 STAFF: oblod
