--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-9-3
+DATE: 8/19/2014
+STAFF: dbm
+CHANGES: changes for xenopus release (TR11662)
+
 TAG: userhelp-5-1-9-2
 DATE: 7/22/2014
 STAFF: dbm
