--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11654-BP
+DATE: 8/21/14
+STAFF: pf
+Branch point for tr11654 development
+
 TAG: userhelp-5-1-9-3
 DATE: 8/19/2014
 STAFF: dbm
