--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-1-9-4
+DATE: 9/02/2014
+STAFF: lnh
+CHANGES: changes from david
+
 TAG: userhelp-tr11654-BP
 DATE: 8/21/14
 STAFF: pf
