--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-2-0-1
+DATE: 9/19/14
+STAFF: pf
+CHANGES: release tags for MGI 5.2
+
 TAG: userhelp-5-1-9-4
 DATE: 9/02/2014
 STAFF: lnh
