userhelp-tr11674-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11674-BP
+DATE: 11/20/14
+STAFF: oblod
+CHANGES: branch point tag for tr11674 release
+
 TAG: userhelp-5-2-0-3
 TAG: userhelp-5-2-0-2
 TAG: userhelp-5-2-0-1
