--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-2-1-1
+DATE: 12/3/14
+STAFF: oblod
+CHANGES: alpha build tags
+
 TAG: userhelp-tr11674-BP
 DATE: 11/20/14
 STAFF: oblod
