--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11886-BP
+DATE: 02/04/2015
+STAFF: oblod
+CHANGES: branch point tag for tr11886 release
+
 TAG: userhelp-5-2-1-1
 DATE: 12/3/14
 STAFF: oblod
