--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-2-1-1
+DATE: 3/13/2015
+STAFF: dbm
+CHANGES: Updates from David Shaw
+
 TAG: userhelp-tr11886-BP
 DATE: 02/04/2015
 STAFF: oblod
