--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-2-1-5
+DATE: 4/6/2015
+STAFF: dbm
+CHANGES: Updates from David Shaw
+
 TAG: userhelp-5-2-1-4
 DATE: 3/13/2015
 STAFF: dbm
