--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-5-2-2-3
+DATE: 6/17/2015
+STAFF: lnh
+CHANGES: Updates from David Shaw - Post 5.22 release
+
 TAG: userhelp-5-2-2-2
 DATE: 5/13/2015
 STAFF: lnh
