--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11726-BP
+DATE: 07/09/2015
+STAFF: jsb
+CHANGES: branch point for Gene View release (TR11726)
+
 TAG: userhelp-5-2-2-3
 DATE: 6/17/2015
 STAFF: lnh
