--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-6-0-0-0
+DATE: 08/18/2015
+STAFF: jsb
+CHANGES: David S. added 'farewell to mouseblast' message
+
 TAG: userhelp-tr11726-BP
 DATE: 07/09/2015
 STAFF: jsb
