userhelp-tr11726-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11726-BP
+DATE: 08/20/2015
+STAFF: oblod
+CHANGES: branch point tag for tr11726 release
+
 TAG: userhelp-6-0-0-1
 TAG: userhelp-6-0-0-0
 DATE: 08/18/2015
