--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-6-0-1-1
+DATE: 09/22/2015
+STAFF: lnh
+CHANGES: Updates from David Shaw - 6.01 release
+
 TAG: userhelp-6-0-1-0
 DATE: 09/10/2015
 STAFF: oblod
