--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-6-0-1-4
+DATE: 10/9/2015
+STAFF: lnh
+CHANGES: Updates from David Shaw - 6.01 release
+
 TAG: userhelp-6-0-1-3
 TAG: userhelp-6-0-1-2
 DATE: 10/2/2015
