--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: userhelp-6-0-1-5
+DATE: 11/03/15
+STAFF: lnh
+CHANGES: Post mouseblast cleanup -
+         removed createIncludeFile('mblast_url.html', config['MOUSEBLAST_URL'])
+         from admin/gen_includes
+
 TAG: userhelp-6-0-1-4
 DATE: 10/9/2015
 STAFF: lnh
