--- a/HISTORY
+++ b/HISTORY
@@ -1,8 +1,9 @@
+TAG: userhelp-6-0-2-4
 TAG: userhelp-6-0-2-3
 TAG: userhelp-6-0-2-2
 TAG: userhelp-6-0-2-1
-DATE: 12/08/15
-STAFF: kstone
+DATE: 12/08/15 -> 1/4/16
+STAFF: kstone, pf
 1) merged tr12070
 
 TAG: userhelp-tr12070-BP
