--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr11937-BP
+DATE: 02/03/2016
+STAFF: oblod
+CHANGES: branch point tag for tr11937 release
+
 TAG: userhelp-6-0-2-4
 TAG: userhelp-6-0-2-3
 TAG: userhelp-6-0-2-2
