--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-6-0-3-0
+DATE: 03/01/2016
+STAFF: lnh
+CHANGES: Changes for 6.03  release
+
 TAG: userhelp-tr11937-BP
 DATE: 02/03/2016
 STAFF: oblod
