--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-6-0-3-1
+DATE: 03/03/2016
+STAFF: drs
+CHANGES: Changes for 6.03 release
+
 TAG: userhelp-6-0-3-0
 DATE: 03/01/2016
 STAFF: lnh
