userhelp-tr12267-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: userhelp-tr12267-BP
+DATE: 06/24/2016
+STAFF: oblod
+CHANGES: branch point tag for tr12267 release
+
 TAG: userhelp-6-0-3-2
 DATE: 03/18/2016
 STAFF: drs
